@startuml Modèle Conceptuel de Données

' Style
skinparam linetype polyline
hide circle
skinparam shadowing false
skinparam nodesep 30
skinparam ranksep 40

title Modèle Conceptuel de Données (MCD) - E-Library

entity "Utilisateur" as user {
  * id_utilisateur : INT
  --
  nom : VARCHAR(100)
  prenom : VARCHAR(100)
  email : VARCHAR(255)
  mot_de_passe : VARCHAR(255)
  role : ENUM
  date_inscription : DATETIME
}

entity "Ressource" as ressource {
  * id_ressource : INT
  --
  type : ENUM('livre', 'film')
  titre : VARCHAR(255)
  auteur_realisateur : VARCHAR(255)
  annee : SMALLINT
  resume : TEXT
  image_url : VARCHAR(255)
  pays : VARCHAR(100)
  date_ajout : DATETIME
}

entity "Livre" as livre {
  * id_ressource : INT <<FK>>
  --
  isbn : VARCHAR(13)
  editeur : VARCHAR(255)
  nombre_pages : INT
  prix : DECIMAL(10,2)
  langue : VARCHAR(50)
}

entity "Film" as film {
  * id_ressource : INT <<FK>>
  --
  duree : INT
  support : ENUM
  langue : VARCHAR(50)
  sous_titres : VARCHAR(255)
  propose_par : ENUM
  casting : TEXT
}

entity "Genre" as genre {
  * id_genre : INT
  --
  nom : VARCHAR(100)
}

entity "Theme" as theme {
  * id_theme : INT
  --
  nom : VARCHAR(100)
}

entity "Evaluation" as eval {
  * id_evaluation : INT
  --
  id_utilisateur : INT <<FK>>
  id_ressource : INT <<FK>>
  note : DECIMAL(2,1)
  critique : TEXT
  date_evaluation : DATETIME
}

' Relations
user ||--o{ eval : "évalue"
ressource ||--o{ eval : "est évaluée"
ressource ||--o| livre : "est un"
ressource ||--o| film : "est un"
ressource }o--o{ genre : "possède"
ressource }o--o{ theme : "possède"

note left of user
  Rôles : utilisateur,
  bibliothecaire, admin
end note

note left of eval
  Contrainte :
  évaluation unique
  par ressource
end note

note right of ressource
  Table Inheritance
  livre OU film
end note

@enduml
